--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -79,11 +79,11 @@ android {
 
     namespace "com.chickencolor"
     defaultConfig {
-        applicationId "com.chickencolor"
+        applicationId "game.app.play.chicken.road"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
-        versionName "1.0"
+        versionName "1.1"
     }
     signingConfigs {
         debug {
